add reader, vtt subtitle files, a testing video

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
    <!-- the player -->
    <div class="flowplayer" data-swf="flowplayer.swf" data-ratio="0.4167">
       <video>
-         <source type="video/webm" src="https://stream.flowplayer.org/bauhaus.webm">
-         <source type="video/mp4" src="https://stream.flowplayer.org/bauhaus.mp4">
+         <source type="video/mp4" src="./video.mp4">
+         <track kind="subtitles" default srclang="en" label="English"
+                      src="./subtitles-en.vtt">
+               <track kind="subtitles" srclang="zh" label="中文"
+                      src="./subtitles-zh.vtt"></video>
       </video>
    </div>
 
